lab3/replica_set.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab3

---
apiVersion: v1
kind: Service
metadata:
  name: service-lab3
  namespace: lab3
spec:
  selector:
    app: react
  ports:
    - port: 3000
      protocol: TCP
      name: http
  type: NodePort
